--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
       <h1> Coral Snake Game </h1>
     </div>
     <div class='title-row'>
-      <img src='https://s3.amazonaws.com/codecademy-content/projects/chore-door/images/star.svg' />
         <p class="instructions-title"> Instructions
         </p>
-       <img src='https://s3.amazonaws.com/codecademy-content/projects/chore-door/images/star.svg' />
     </div>
       <div class="instructions-row">
         <table>
@@ -37,13 +35,13 @@
         </table>
       </div>
     <div class="snake-row snake-leaves">
-      <img id='snake1' src='https://s3.amazonaws.com/codecademy-content/projects/chore-door/images/closed_door.svg' />
+      <img id='snake1' src='https://github.com/AeronRoemer/SnakeGame/blob/master/SnakeHidden.png' />
     </div>
     <div class="snake-row snake-leaves">
-      <img id='snake2' src='https://s3.amazonaws.com/codecademy-content/projects/chore-door/images/closed_door.svg' />
+      <img id='snake2' src='https://github.com/AeronRoemer/SnakeGame/blob/master/SnakeHidden.png' />
     </div>
     <div class="snake-row snake-leaves">
-      <img id='snake3' src='https://s3.amazonaws.com/codecademy-content/projects/chore-door/images/closed_door.svg' />
+      <img id='snake3' src='https://github.com/AeronRoemer/SnakeGame/blob/master/SnakeHidden.png' />
     </div>
     <div id='start' class='start-row'>Good Luck!</div>
     <script type='text/javascript' src='script.js'></script>
