--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </table>
       </div>
     <div class="snake-row snake-leaves">
-      <img id='snake1' src='https://github.com/AeronRoemer/SnakeGame/blob/master/SnakeHidden.png' />
+      <img id='snake1' src='https://raw.github.com/AeronRoemer/SnakeGame/master/SnakeHidden.png' />
     </div>
     <div class="snake-row snake-leaves">
       <img id='snake2' src='https://github.com/AeronRoemer/SnakeGame/blob/master/SnakeHidden.png' />
