--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         </table>
       </div>
     <div class="snake-row snake-leaves">
-      <img id='snake1' src='https://raw.github.com/AeronRoemer/SnakeGame/master/SnakeHidden.png' />
+      <img id='snake1' src='https://raw.githubusercontent.com/AeronRoemer/SnakeGame/master/SnakeHidden.png' />
     </div>
     <div class="snake-row snake-leaves">
-      <img id='snake2' src='https://github.com/AeronRoemer/SnakeGame/blob/master/SnakeHidden.png' />
+      <img id='snake2' src='https://raw.githubusercontent.com/AeronRoemer/SnakeGame/master/SnakeHidden.png' />
     </div>
     <div class="snake-row snake-leaves">
-      <img id='snake3' src='https://github.com/AeronRoemer/SnakeGame/blob/master/SnakeHidden.png' />
+      <img id='snake3' src='https://raw.githubusercontent.com/AeronRoemer/SnakeGame/master/SnakeHidden.png' />
     </div>
     <div id='start' class='start-row'>Good Luck!</div>
     <script type='text/javascript' src='script.js'></script>
