--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Chore Door!</title>
+    <title>Death by Snakebite!</title>
     <link href="./style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet" type="text/css">
   </head>
@@ -34,6 +34,7 @@
           </tr>
         </table>
       </div>
+   <div class="flexy">
     <div class="snake-row snake-leaves">
       <img id='snake1' src='https://raw.githubusercontent.com/AeronRoemer/SnakeGame/master/SnakeHidden.png' />
     </div>
@@ -42,6 +43,7 @@
     </div>
     <div class="snake-row snake-leaves">
       <img id='snake3' src='https://raw.githubusercontent.com/AeronRoemer/SnakeGame/master/SnakeHidden.png' />
+    </div>
     </div>
     <div id='start' class='start-row'>Good Luck!</div>
     <script type='text/javascript' src='script.js'></script>
